Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46558

SSL elliptic curves methods in wrong class

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.5.0 RC
    • 5.5.0 RC
    • Network
    • None
    • 92cda9474245c79b635c21cd140c5d0a3a6d2e5b

    Description

      On Friday 05 June 2015 10:11:29 Frederik Gladhorn wrote:
      > + // EC settings.
      > + QVector<QSslEllipticCurve> ellipticCurves() const;
      > + void setEllipticCurves(const QVector<QSslEllipticCurve> &curves);
      > + static void setDefaultEllipticCurves(const QVector<QSslEllipticCurve>
      > &curves); + static QVector<QSslEllipticCurve> defaultEllipticCurves();
      > + static QVector<QSslEllipticCurve> supportedEllipticCurves();
      > +

      These should be in QSslConfiguration, not QSslSocket.


      Thiago Macieira - thiago.macieira (AT) intel.com
      Software Architect - Intel Open Source Technology Center

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              peppe Giuseppe D'Angelo
              janihe Jani Heikkinen
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes